<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="8dp"
                android:text="@string/compare" />

            <Button
                    android:id="@+id/button1"
                    style="@android:style/Widget.Button.Inset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:minWidth="300dp"
                    android:onClick="openPopupMenu"
                    android:text="@string/no_select"
                    android:textStyle="italic"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/empty"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:text="@string/with" />

            <Button
                    android:id="@+id/button2"
                    style="@android:style/Widget.Button.Inset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:minWidth="300dp"
                    android:onClick="openPopupMenu"
                    android:text="@string/no_select"
                    android:textStyle="italic"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/empty"
                android:textSize="30sp" />
        </TableRow>


    </TableLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_1"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/button_1"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_4" />

        <Button
                android:id="@+id/button_2"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:text="@string/button_2"
                android:onClick="onClick"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_3"
                app:layout_constraintStart_toEndOf="@+id/button_1"
                app:layout_constraintTop_toBottomOf="@+id/button_5"
                app:layout_constraintVertical_bias="1.0"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:gravity="center"/>

        <Button
                android:id="@+id/button_3"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="16dp"
                android:text="@string/button_3"
                android:onClick="onClick"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_point"
                app:layout_constraintStart_toEndOf="@+id/button_2"
                app:layout_constraintTop_toBottomOf="@+id/button_6"
                app:layout_constraintVertical_bias="1.0"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:gravity="center"/>

        <Button
                android:id="@+id/button_4"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/button_4"
                android:onClick="onClick"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/button_1"
                app:layout_constraintEnd_toStartOf="@+id/button_5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_7" />

        <Button
                android:id="@+id/button_5"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:text="@string/button_5"
                android:onClick="onClick"
                app:layout_constraintBottom_toTopOf="@+id/button_2"
                app:layout_constraintEnd_toStartOf="@+id/button_6"
                app:layout_constraintStart_toEndOf="@+id/button_4"
                app:layout_constraintTop_toBottomOf="@+id/button_8"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:gravity="center"/>

        <Button
                android:id="@+id/button_6"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:text="@string/button_6"
                android:onClick="onClick"
                app:layout_constraintBottom_toTopOf="@+id/button_3"
                app:layout_constraintEnd_toStartOf="@+id/button_0"
                app:layout_constraintStart_toEndOf="@+id/button_5"
                app:layout_constraintTop_toBottomOf="@+id/button_9"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:gravity="center"/>

        <Button
                android:id="@+id/button_7"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/button_7"
                android:onClick="onClick"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/button_4"
                app:layout_constraintEnd_toStartOf="@+id/button_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <Button
                android:id="@+id/button_8"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:text="@string/button_8"
                android:onClick="onClick"
                app:layout_constraintBottom_toTopOf="@+id/button_5"
                app:layout_constraintEnd_toStartOf="@+id/button_9"
                app:layout_constraintStart_toEndOf="@+id/button_7"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:gravity="center"/>

        <Button
                android:id="@+id/button_9"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:text="@string/button_9"
                android:onClick="onClick"
                app:layout_constraintBottom_toTopOf="@+id/button_6"
                app:layout_constraintEnd_toStartOf="@+id/button_clear"
                app:layout_constraintStart_toEndOf="@+id/button_8"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:gravity="center"/>

        <Button
                android:id="@+id/button_0"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:text="@string/button_0"
                android:onClick="onClick"
                app:layout_constraintBottom_toTopOf="@+id/button_point"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_6"
                app:layout_constraintTop_toBottomOf="@+id/button_clear"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:gravity="center"/>

        <Button
                android:id="@+id/button_point"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="16dp"
                android:text="@string/button_point"
                android:onClick="onClick"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_3"
                app:layout_constraintTop_toBottomOf="@+id/button_0"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:gravity="center"/>

        <Button
                android:id="@+id/button_clear"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:text="@string/button_clear"
                android:onClick="onClick"
                app:layout_constraintBottom_toTopOf="@+id/button_0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_9"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:gravity="center"/>

    </android.support.constraint.ConstraintLayout>
</LinearLayout>